--- a/templates/Sanity_Check.html
+++ b/templates/Sanity_Check.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block sanity_check %}
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/Sanity_Check.css') }}">
+{% endblock %}
+
 {% block content %}
 
 <div class="container">
